ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calibre
  namespace: calibre
spec:
  rules:
  - host: "calibre.hosrasmus.hopto.org"
    http:
      paths:
      - path: /
        backend:
          serviceName: calibre
          servicePort: 80
